ajustes realizados para rodar o patch
